--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -75,9 +75,8 @@ am_libdpkg_a_OBJECTS = compat.$(OBJEXT) compression.$(OBJEXT) \
 	ehandle.$(OBJEXT) fields.$(OBJEXT) lock.$(OBJEXT) \
 	md5.$(OBJEXT) mlib.$(OBJEXT) myopt.$(OBJEXT) \
 	nfmalloc.$(OBJEXT) parse.$(OBJEXT) parsehelp.$(OBJEXT) \
-	showcright.$(OBJEXT) showpkg.$(OBJEXT) star.$(OBJEXT) \
-	tarfn.$(OBJEXT) utils.$(OBJEXT) varbuf.$(OBJEXT) \
-	vercmp.$(OBJEXT)
+	showcright.$(OBJEXT) showpkg.$(OBJEXT) tarfn.$(OBJEXT) \
+	utils.$(OBJEXT) varbuf.$(OBJEXT) vercmp.$(OBJEXT)
 libdpkg_a_OBJECTS = $(am_libdpkg_a_OBJECTS)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
@@ -249,7 +248,6 @@ libdpkg_a_SOURCES = \
 	parsedump.h \
 	showcright.c \
 	showpkg.c \
-	star.c \
 	tarfn.c tarfn.h \
 	utils.c \
 	varbuf.c \
@@ -318,7 +316,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/parsehelp.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/showcright.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/showpkg.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/star.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/tarfn.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/utils.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/varbuf.Po@am__quote@
