--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Scott James Remnant <scott@netsplit.com>
 Origin: debian
 Bugs: debbugs://bugs.debian.org
 Standards-Version: 3.6.1.0
-Build-Depends: debhelper (>= 4.1.81), libncurses5-dev | libncurses-dev, zlib1g-dev (>= 1:1.1.3-19.1), libbz2-dev, libselinux1-dev
+Build-Depends: debhelper (>= 4.1.81), libncurses5-dev | libncurses-dev, zlib1g-dev (>= 1:1.1.3-19.1), libbz2-dev, libselinux1-dev [!hurd-i386]
 
 Package: dpkg
 Architecture: any
