Import latest release as a temporary trunk which should be later merged into a branch with the full history from CVS and arch

--- a/debian/control
+++ b/debian/control
@@ -15,7 +15,7 @@ Depends: coreutils | textutils (>= 2.0-3)
 Conflicts: sysvinit (<< 2.82-1), dpkg-iasearch (<< 0.11), dpkg-static, dpkg-dev (<< 1.10)
 Replaces: dpkg-doc-ja, dpkg-static, manpages-de (<= 0.4-3)
 Suggests: apt
-Description: Package maintenance system for Debian
+Description: package maintenance system for Debian
  This package contains the low-level commands for handling the installation
  and removal of packages on your system.
  .
@@ -31,7 +31,7 @@ Recommends: gcc | c-compiler, bzip2
 Suggests: gnupg, debian-keyring
 Conflicts: dpkgname
 Replaces: dpkgname, dpkg (<< 1.4.1.8), dpkg-doc-ja
-Description: Package building tools for Debian
+Description: package building tools for Debian
  This package contains the tools (including dpkg-source) required to
  unpack, build and upload Debian source packages.
  .
@@ -42,7 +42,7 @@ Package: dselect
 Architecture: any
 Depends: ${shlibs:Depends}, dpkg (>= 1.13.1)
 Replaces: dpkg (<< 1.10.3)
-Description: a user tool to manage Debian packages
+Description: user tool to manage Debian packages
  dselect is an interface for managing the installation and removal of
  packages on your system.
  .
