--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,8 @@
 Source: dpkg
 Section: base
 Priority: required
-Maintainer: Scott James Remnant <scott@netsplit.com>
+Maintainer: Dpkg Developers <team@dpkg.org>
+Uploaders: Frank Lichtenheld <djpig@debian.org>, Guillem Jover <guillem@debian.org>, Brendan O'Dea <bod@debian.org>, Christian Perrier <bubulle@debian.org>
 Origin: debian
 Bugs: debbugs://bugs.debian.org
 Standards-Version: 3.6.1.0
