dpkg and dselect are now in section admin, not section base. Correct info in the control file.

--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: dpkg
-Section: base
+Section: admin
 Priority: required
 Maintainer: Dpkg Developers <team@dpkg.org>
 Uploaders: Frank Lichtenheld <djpig@debian.org>, Guillem Jover <guillem@debian.org>, Brendan O'Dea <bod@debian.org>, Christian Perrier <bubulle@debian.org>
