Add (finally!) a changelog entry about the switch to po4a Add a Build-Depends on po4a

--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Uploaders: Frank Lichtenheld <djpig@debian.org>, Guillem Jover <guillem@debian.o
 Origin: debian
 Bugs: debbugs://bugs.debian.org
 Standards-Version: 3.6.2
-Build-Depends: debhelper (>= 4.1.81), libncurses5-dev | libncurses-dev, zlib1g-dev (>= 1:1.1.3-19.1), libbz2-dev, libsepol1-dev [!hurd-i386 !kfreebsd-i386], libselinux1-dev [!hurd-i386 !kfreebsd-i386]
+Build-Depends: debhelper (>= 4.1.81), libncurses5-dev | libncurses-dev, zlib1g-dev (>= 1:1.1.3-19.1), libbz2-dev, libsepol1-dev [!hurd-i386 !kfreebsd-i386], libselinux1-dev [!hurd-i386 !kfreebsd-i386], po4a
 
 Package: dpkg
 Architecture: any
