added hu dpkg.cfg & dselect.cfg manpages

--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -1,4 +1,4 @@
 ## Process this file with automake to produce Makefile.in
 
 # C must be the first sub-directory because it contains the POT files.
-SUBDIRS = C de es fr ja pt_BR ru sv
+SUBDIRS = C de es fr hu ja pt_BR ru sv
