Polish man pages translation update

--- a/configure.ac
+++ b/configure.ac
@@ -115,6 +115,7 @@ AC_CONFIG_FILES([ Makefile
 		  man/fr/Makefile
 		  man/hu/Makefile
 		  man/ja/Makefile
+		  man/pl/Makefile
 		  man/pt_BR/Makefile
 		  man/ru/Makefile
 		  man/sv/Makefile
