--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,7 @@ Essential: yes
 Pre-Depends: ${shlibs:Depends}
 Depends: coreutils | textutils (>= 2.0-3)
 Conflicts: sysvinit (<< 2.82-1), dpkg-iasearch (<< 0.11), dpkg-static, dpkg-dev (<< 1.10)
-Replaces: dpkg-doc-ja, dpkg-static, manpages-de (<= 0.4-3)
+Replaces: dpkg-doc-ja, dpkg-static, manpages-de (<= 0.4-3), manpages-pl (<= 20051117-1)
 Suggests: apt
 Description: package maintenance system for Debian
  This package contains the low-level commands for handling the installation
@@ -31,7 +31,7 @@ Depends: dpkg (>= 1.13.1), perl5, perl-modules, cpio (>= 2.4.2-2), patch (>= 2.2
 Recommends: gcc | c-compiler, bzip2
 Suggests: gnupg, debian-keyring
 Conflicts: dpkgname
-Replaces: dpkgname, dpkg (<< 1.4.1.8), dpkg-doc-ja
+Replaces: dpkgname, dpkg (<< 1.4.1.8), dpkg-doc-ja, manpages-pl (<= 20051117-1)
 Description: package building tools for Debian
  This package contains the tools (including dpkg-source) required to
  unpack, build and upload Debian source packages.
