--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Uploaders: Frank Lichtenheld <djpig@debian.org>, Guillem Jover <guillem@debian.o
 Origin: debian
 Bugs: debbugs://bugs.debian.org
 Standards-Version: 3.6.2
-Build-Depends: debhelper (>= 4.1.81), pkg-config, libncurses5-dev | libncurses-dev, zlib1g-dev (>= 1:1.1.3-19.1), libbz2-dev, libselinux1-dev (>= 1.28-4) [!hurd-i386 !kfreebsd-i386], po4a
+Build-Depends: debhelper (>= 4.1.81), pkg-config, libncurses5-dev | libncurses-dev, zlib1g-dev (>= 1:1.1.3-19.1), libbz2-dev, libselinux1-dev (>= 1.28-4) [!hurd-i386 !kfreebsd-i386 !kfreebsd-amd64], po4a
 
 Package: dpkg
 Architecture: any
