Add new quiet option to dpkg-source to supress warnings. Closes: #355065

--- a/scripts/controllib.pl.in
+++ b/scripts/controllib.pl.in
@@ -26,6 +26,7 @@ $substvar{'Space'}= " ";
 $substvar{'Tab'}= "\t";
 $maxsubsts=50;
 $warnable_error= 1;
+$quiet_warnings = 0;
 
 $progname= $0; $progname= $& if $progname =~ m,[^/]+$,;
 
@@ -456,7 +457,7 @@ sub failure { die "$progname: failure: $_[0]\n"; }
 sub syserr { die "$progname: failure: $_[0]: $!\n"; }
 sub error { die "$progname: error: $_[0]\n"; }
 sub internerr { die "$progname: internal error: $_[0]\n"; }
-sub warn { warn "$progname: warning: $_[0]\n"; }
+sub warn { if (!$quiet_warnings) { warn "$progname: warning: $_[0]\n"; } }
 sub usageerr { print(STDERR "$progname: @_\n\n"); &usageversion; exit(2); }
 sub warnerror { if ($warnable_error) { &warn( @_ ); } else { &error( @_ ); } }
 
