* Add gettext support for the Perl scripts. Based on a patch by   Nicolas François. Closes: #165843 * Only print usage information of dpkg-scanpackages on stdout   if requested explicetly. Use stderr in case of error.   Closes: #366659

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -50,3 +50,9 @@ dpkg-split/split.c
 
 utils/enoent.c
 utils/start-stop-daemon.c
+
+scripts/cleanup-info.pl
+scripts/dpkg-divert.pl
+scripts/dpkg-statoverride.pl
+scripts/install-info.pl
+scripts/update-alternatives.pl
