--- a/debian/control
+++ b/debian/control
@@ -13,8 +13,7 @@ Build-Depends: debhelper (>= 4.1.81), pkg-config, po4a,
 Package: dpkg
 Architecture: any
 Essential: yes
-Pre-Depends: ${shlibs:Depends}
-Depends: coreutils | textutils (>= 2.0-3)
+Pre-Depends: ${shlibs:Depends}, coreutils (>= 5.93-1)
 Conflicts: sysvinit (<< 2.82-1), dpkg-iasearch (<< 0.11), dpkg-static,
  dpkg-dev (<< 1.10)
 Replaces: dpkg-doc-ja, dpkg-static, manpages-de (<= 0.4-3),
