Add lintian overrides for dpkg, dpkg-dev, dselect and sources.

--- a/debian/rules
+++ b/debian/rules
@@ -87,6 +87,13 @@ binary-arch: install
 	install -d debian/dselect/usr/share/doc
 	ln -s dpkg debian/dselect/usr/share/doc/dselect
 
+	install -d debian/dpkg/usr/share/lintian/overrides
+	install -m 644 debian/dpkg.lintian-overrides \
+		       debian/dpkg/usr/share/lintian/overrides/dpkg
+	install -d debian/dselect/usr/share/lintian/overrides
+	install -m 644 debian/dselect.lintian-overrides \
+		       debian/dselect/usr/share/lintian/overrides/dselect
+
 	dh_strip -a
 	dh_compress -a
 	dh_fixperms -a
@@ -104,6 +111,10 @@ binary-indep: install
 
 	install -d debian/dpkg-dev/usr/share/doc
 	ln -s dpkg debian/dpkg-dev/usr/share/doc/dpkg-dev
+
+	install -d debian/dpkg-dev/usr/share/lintian/overrides
+	install -m 644 debian/dpkg-dev.lintian-overrides \
+		       debian/dpkg-dev/usr/share/lintian/overrides/dpkg-dev
 
 	dh_strip -i
 	dh_compress -i
