Replace logrotate installation logic with dh_installlogrotate.

--- a/debian/rules
+++ b/debian/rules
@@ -77,8 +77,8 @@ binary-arch: install
 	dh_testdir -a
 	dh_testroot -a
 	dh_install --sourcedir=debian/tmp -a
-	install -d debian/dpkg/etc/logrotate.d
-	install -m 644 debian/dpkg.logrotate debian/dpkg/etc/logrotate.d/dpkg
+	dh_installlogrotate -a
+
 	install -d debian/dpkg/sbin
 	mv debian/dpkg/usr/sbin/start-stop-daemon debian/dpkg/sbin
 
