German translation update (and new translations) of start-stop-daemon.8, update-alternatives.8, dpkg.cfg.5, and dselect.cfg.5. Also fix some typos in the start-stop-daemon.8 and update-alternatives.8 man pages.

--- a/man/po4a/dselect.cfg.5/dselect.cfg.5.cfg
+++ b/man/po4a/dselect.cfg.5/dselect.cfg.5.cfg
@@ -1,4 +1,4 @@
-[po4a_langs] hu pl sv
+[po4a_langs] hu pl sv de
 [po4a_paths] $(srcdir)/dselect.cfg.5/po/dselect.cfg.5.pot $lang:$(srcdir)/dselect.cfg.5/po/$lang.po
 
 [type:man] $(srcdir)/../C/dselect.cfg.5 $lang:../$lang/dselect.cfg.5 add_$lang:$(srcdir)/add_$lang/dselect.cfg.5.$lang.add opt_ru:"-L koi8-r -A koi8-r"
