New German manpages translations: 822-date.1 and deb-old.5

--- a/man/po4a/deb-old.5/deb-old.5.cfg
+++ b/man/po4a/deb-old.5/deb-old.5.cfg
@@ -1,4 +1,4 @@
-[po4a_langs] es ja sv
+[po4a_langs] de es ja sv
 [po4a_paths] $(srcdir)/deb-old.5/po/deb-old.5.pot $lang:$(srcdir)/deb-old.5/po/$lang.po
 
 [type:man] $(srcdir)/../C/deb-old.5 $lang:../$lang/deb-old.5 add_$lang:$(srcdir)/add_$lang/deb-old.5.$lang.add opt_ru:"-L koi8-r -A koi8-r"
