New German translation for the deb.5, dpkg-scanpackages.1, and dpkg-checkbuilddeps.1 man pages.

--- a/man/po4a/deb.5/deb.5.cfg
+++ b/man/po4a/deb.5/deb.5.cfg
@@ -1,4 +1,4 @@
-[po4a_langs] es fr ja sv
+[po4a_langs] de es fr ja sv
 [po4a_paths] $(srcdir)/deb.5/po/deb.5.pot $lang:$(srcdir)/deb.5/po/$lang.po
 
 [type:man] $(srcdir)/../C/deb.5 $lang:../$lang/deb.5 add_$lang:$(srcdir)/add_$lang/deb.5.$lang.add opt_ru:"-L koi8-r -A koi8-r"
