Add the German translation of the dpkg-statoverride.8 manpage.

--- a/man/po4a/dpkg-statoverride.8/dpkg-statoverride.8.cfg
+++ b/man/po4a/dpkg-statoverride.8/dpkg-statoverride.8.cfg
@@ -1,4 +1,4 @@
-[po4a_langs] es fr ja pl
+[po4a_langs] de es fr ja pl
 [po4a_paths] $(srcdir)/dpkg-statoverride.8/po/dpkg-statoverride.8.pot $lang:$(srcdir)/dpkg-statoverride.8/po/$lang.po
 
 [type:man] $(srcdir)/../C/dpkg-statoverride.8 $lang:../$lang/dpkg-statoverride.8 add_$lang:$(srcdir)/add_$lang/dpkg-statoverride.8.$lang.add opt_ru:"-L koi8-r -A koi8-r"
