Add the German translation of the dpkg.1, dpkg-divert.8, and deb-control.5 man pages.

--- a/man/po4a/dpkg-divert.8/dpkg-divert.8.cfg
+++ b/man/po4a/dpkg-divert.8/dpkg-divert.8.cfg
@@ -1,4 +1,4 @@
-[po4a_langs] es fr ja
+[po4a_langs] de es fr ja
 [po4a_paths] $(srcdir)/dpkg-divert.8/po/dpkg-divert.8.pot $lang:$(srcdir)/dpkg-divert.8/po/$lang.po
 
 [type:man] $(srcdir)/../C/dpkg-divert.8 $lang:../$lang/dpkg-divert.8 add_$lang:$(srcdir)/add_$lang/dpkg-divert.8.$lang.add opt_ru:"-L koi8-r -A koi8-r"
