--- a/man/po4a/dpkg.1/dpkg.1.cfg
+++ b/man/po4a/dpkg.1/dpkg.1.cfg
@@ -1,4 +1,4 @@
-[po4a_langs] es fr ja pl pt_BR ru sv
+[po4a_langs] de es fr ja pl pt_BR ru sv
 [po4a_paths] $(srcdir)/dpkg.1/po/dpkg.1.pot $lang:$(srcdir)/dpkg.1/po/$lang.po
 
 [type:man] $(srcdir)/../C/dpkg.1 $lang:../$lang/dpkg.1 add_$lang:$(srcdir)/add_$lang/dpkg.1.$lang.add opt_ru:"-L koi8-r -A koi8-r"
