Add the German translation of the dpkg-architecture.1 manpage, and the initialisation of the translations of the dselect.1, dpkg-source.1, dpkg-query.1, install-info.8, dpkg-deb.1, and dpkg-split.1 manpages.

--- a/man/po4a/dpkg-architecture.1/dpkg-architecture.1.cfg
+++ b/man/po4a/dpkg-architecture.1/dpkg-architecture.1.cfg
@@ -1,4 +1,4 @@
-[po4a_langs] fr
+[po4a_langs] de fr
 [po4a_paths] $(srcdir)/dpkg-architecture.1/po/dpkg-architecture.1.pot $lang:$(srcdir)/dpkg-architecture.1/po/$lang.po
 
 [type:man] $(srcdir)/../C/dpkg-architecture.1 $lang:../$lang/dpkg-architecture.1 add_$lang:$(srcdir)/add_$lang/dpkg-architecture.1.$lang.add 
