--- a/man/po4a/dpkg-source.1/dpkg-source.1.cfg
+++ b/man/po4a/dpkg-source.1/dpkg-source.1.cfg
@@ -1,4 +1,4 @@
-[po4a_langs] es fr
+[po4a_langs] de es fr
 [po4a_paths] $(srcdir)/dpkg-source.1/po/dpkg-source.1.pot $lang:$(srcdir)/dpkg-source.1/po/$lang.po
 
 [type:man] $(srcdir)/../C/dpkg-source.1 $lang:../$lang/dpkg-source.1 add_$lang:$(srcdir)/add_$lang/dpkg-source.1.$lang.add opt_ru:"-L koi8-r -A koi8-r"
