--- a/man/po4a/dpkg-deb.1/dpkg-deb.1.cfg
+++ b/man/po4a/dpkg-deb.1/dpkg-deb.1.cfg
@@ -1,4 +1,4 @@
-[po4a_langs] es fr hu ja pl sv
+[po4a_langs] de es fr hu ja pl sv
 [po4a_paths] $(srcdir)/dpkg-deb.1/po/dpkg-deb.1.pot $lang:$(srcdir)/dpkg-deb.1/po/$lang.po
 
 [type:man] $(srcdir)/../C/dpkg-deb.1 $lang:../$lang/dpkg-deb.1 add_$lang:$(srcdir)/add_$lang/dpkg-deb.1.$lang.add opt_ru:"-L koi8-r -A koi8-r"
