Japanese translation of the cleanup-info(8), dpkg-name(1), dpkg-scanpackages(1) and dpkg-statoverride(8) manpages.

--- a/man/po4a/cleanup-info.8/cleanup-info.8.cfg
+++ b/man/po4a/cleanup-info.8/cleanup-info.8.cfg
@@ -1,4 +1,4 @@
 [po4a_langs] de es fr ja
 [po4a_paths] $(srcdir)/cleanup-info.8/po/cleanup-info.8.pot $lang:$(srcdir)/cleanup-info.8/po/$lang.po
 
-[type:man] $(srcdir)/../C/cleanup-info.8 $lang:../$lang/cleanup-info.8 add_$lang:$(srcdir)/add_$lang/cleanup-info.8.$lang.add opt_ru:"-L koi8-r -A koi8-r"
+[type:man] $(srcdir)/../C/cleanup-info.8 $lang:../$lang/cleanup-info.8 add_$lang:$(srcdir)/add_$lang/cleanup-info.8.$lang.add opt_ru:"-L koi8-r -A koi8-r" opt_ja:"-L euc-jp -A utf-8"
