Japanese translation of deb-control(5), dpkg-deb(1), install-info(8), start-stop-daemon(8).

--- a/man/po4a/start-stop-daemon.8/start-stop-daemon.8.cfg
+++ b/man/po4a/start-stop-daemon.8/start-stop-daemon.8.cfg
@@ -1,4 +1,4 @@
 [po4a_langs] de es fr ja pl ru sv
 [po4a_paths] $(srcdir)/start-stop-daemon.8/po/start-stop-daemon.8.pot $lang:$(srcdir)/start-stop-daemon.8/po/$lang.po
 
-[type:man] $(srcdir)/../C/start-stop-daemon.8 $lang:../$lang/start-stop-daemon.8 add_$lang:$(srcdir)/add_$lang/start-stop-daemon.8.$lang.add opt_ru:"-L koi8-r -A koi8-r"
+[type:man] $(srcdir)/../C/start-stop-daemon.8 $lang:../$lang/start-stop-daemon.8 add_$lang:$(srcdir)/add_$lang/start-stop-daemon.8.$lang.add opt_ru:"-L koi8-r -A koi8-r" opt_ja:"-L euc-jp -A utf-8"
