The Hungarian pages have to be encoded in ISO-8859-2. As the PO are now encoded in UTF-8, the encoding of the generated man pages and of the addenda must be specified in the po4a config file.

--- a/man/po4a/deb-control.5/deb-control.5.cfg
+++ b/man/po4a/deb-control.5/deb-control.5.cfg
@@ -1,4 +1,4 @@
 [po4a_langs] de es fr hu ja ru sv
 [po4a_paths] $(srcdir)/deb-control.5/po/deb-control.5.pot $lang:$(srcdir)/deb-control.5/po/$lang.po
 
-[type:man] $(srcdir)/../C/deb-control.5 $lang:../$lang/deb-control.5 add_$lang:$(srcdir)/add_$lang/deb-control.5.$lang.add opt_ru:"-L koi8-r -A koi8-r" opt_ja:"-L euc-jp -A utf-8"
+[type:man] $(srcdir)/../C/deb-control.5 $lang:../$lang/deb-control.5 add_$lang:$(srcdir)/add_$lang/deb-control.5.$lang.add opt_ru:"-L koi8-r -A koi8-r" opt_ja:"-L euc-jp -A utf-8" opt_hu:"-L ISO-8859-2 -A ISO-8859-2"
