--- a/man/po4a/dpkg.cfg.5/dpkg.cfg.5.cfg
+++ b/man/po4a/dpkg.cfg.5/dpkg.cfg.5.cfg
@@ -1,4 +1,4 @@
-[po4a_langs] hu pl sv de
+[po4a_langs] fr hu pl sv de
 [po4a_paths] $(srcdir)/dpkg.cfg.5/po/dpkg.cfg.5.pot $lang:$(srcdir)/dpkg.cfg.5/po/$lang.po
 
-[type:man] $(srcdir)/../C/dpkg.cfg.5 $lang:../$lang/dpkg.cfg.5 add_$lang:$(srcdir)/add_$lang/dpkg.cfg.5.$lang.add opt_ru:"-L koi8-r -A koi8-r"
+[type:man] $(srcdir)/../C/dpkg.cfg.5 $lang:../$lang/dpkg.cfg.5 add_$lang:$(srcdir)/add_$lang/dpkg.cfg.5.$lang.add opt_ru:"-L koi8-r -A koi8-r"  opt_hu:"-L ISO-8859-2 -A ISO-8859-2"
