Change priority for dpkg-dev from standard to optional to match the override.

--- a/debian/control
+++ b/debian/control
@@ -28,7 +28,7 @@ Description: package maintenance system for Debian
 
 Package: dpkg-dev
 Section: utils
-Priority: standard
+Priority: optional
 Architecture: all
 Depends: dpkg (>= 1.13.20), perl5, perl-modules, cpio (>= 2.4.2-2),
  patch (>= 2.2-1), make, binutils
