Split override file information from dpkg-scanpackages(1) into deb-override(5) manual page.

--- a/man/po/po4a.cfg
+++ b/man/po/po4a.cfg
@@ -38,6 +38,11 @@
            add_$lang:$(srcdir)/po/add_$lang/deb-old.5.$lang.add
 
 
+[type:man] $(srcdir)/deb-override.5             \
+           $lang:$lang/deb-override.5           \
+           add_$lang:$(srcdir)/po/add_$lang/deb-override.5.$lang.add
+
+
 [type:man] $(srcdir)/dpkg.1                     \
            $lang:$lang/dpkg.1                   \
            add_$lang:$(srcdir)/po/add_$lang/dpkg.1.$lang.add
