Split dpkg-source(1) into independent man pages, namely dpkg-buildpackage(1), dpkg-distaddfile(1), dpkg-genchanges(1), dpkg-gencontrol(1), dpkg-parsechangelog(1), dpkg-shlibdeps(1), deb-shlibs(5) and deb-substvars(5).

--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -3,13 +3,6 @@
 all-local:
 	po4a --no-backups --variable srcdir=$(srcdir) \
 		$(srcdir)/po/po4a.cfg
-# Make the symlink
-	for lang in $(LINGUAS); do \
-		cd $$lang; \
-		$(MAKE) -f ../Makefile -B $(dpkg_source_aliases) \
-			srcdir="$(realpath $(srcdir))/$$lang"; \
-		cd ..; \
-	done
 
 clean-local:
 	po4a --rm-backups --rm-translations --variable srcdir=$(srcdir) \
@@ -35,17 +28,25 @@ dist_man_MANS = \
 	822-date.1 \
 	cleanup-info.8 \
 	deb-control.5 \
+	deb-shlibs.5 \
+	deb-substvars.5 \
 	deb-old.5 \
 	deb-override.5 \
 	deb.5 \
 	dpkg-architecture.1 \
+	dpkg-buildpackage.1 \
 	dpkg-checkbuilddeps.1 \
 	dpkg-deb.1 \
+	dpkg-distaddfile.1 \
 	dpkg-divert.8 \
+	dpkg-genchanges.1 \
+	dpkg-gencontrol.1 \
 	dpkg-name.1 \
+	dpkg-parsechangelog.1 \
 	dpkg-query.1 \
 	dpkg-scanpackages.1 \
 	dpkg-scansources.1 \
+	dpkg-shlibdeps.1 \
 	dpkg-source.1 \
 	dpkg-split.1 \
 	dpkg-statoverride.8 \
@@ -56,22 +57,4 @@ dist_man_MANS = \
 	install-info.8 \
 	start-stop-daemon.8 \
 	update-alternatives.8
-
-dpkg_source_aliases = \
-	dpkg-buildpackage.1 \
-	dpkg-distaddfile.1 \
-	dpkg-genchanges.1 \
-	dpkg-gencontrol.1 \
-	dpkg-parsechangelog.1 \
-	dpkg-shlibdeps.1
-
-man_MANS = $(dpkg_source_aliases)
-CLEANFILES = $(dpkg_source_aliases)
-
-
-$(dpkg_source_aliases):
-	if [ -f dpkg-source.1 ] || [ -f $(srcdir)/dpkg-source.1 ]; then \
-		echo ".so man1/dpkg-source.1" > $@; \
-		chmod 644 $@; \
-	fi
 
