--- a/man/po/po4a.cfg
+++ b/man/po/po4a.cfg
@@ -43,6 +43,16 @@
            add_$lang:$(srcdir)/po/add_$lang/deb-override.5.$lang.add
 
 
+[type:man] $(srcdir)/deb-shlibs.5               \
+           $lang:$lang/deb-shlibs.5             \
+           add_$lang:$(srcdir)/po/add_$lang/deb-shlibs.5.$lang.add
+
+
+[type:man] $(srcdir)/deb-substvars.5            \
+           $lang:$lang/deb-substvars.5          \
+           add_$lang:$(srcdir)/po/add_$lang/deb-substvars.5.$lang.add
+
+
 [type:man] $(srcdir)/dpkg.1                     \
            $lang:$lang/dpkg.1                   \
            add_$lang:$(srcdir)/po/add_$lang/dpkg.1.$lang.add
@@ -58,9 +68,19 @@
            add_$lang:$(srcdir)/po/add_$lang/dpkg.cfg.5.$lang.add
 
 
+[type:man] $(srcdir)/dpkg-buildpackage.1        \
+           $lang:$lang/dpkg-buildpackage.1      \
+           add_$lang:$(srcdir)/po/add_$lang/dpkg-buildpackage.1.$lang.add
+
+
 [type:man] $(srcdir)/dpkg-checkbuilddeps.1      \
            $lang:$lang/dpkg-checkbuilddeps.1    \
            add_$lang:$(srcdir)/po/add_$lang/dpkg-checkbuilddeps.1.$lang.add
+
+
+[type:man] $(srcdir)/dpkg-distaddfile.1         \
+           $lang:$lang/dpkg-distaddfile.1       \
+           add_$lang:$(srcdir)/po/add_$lang/dpkg-distaddfile.1.$lang.add
 
 
 [type:man] $(srcdir)/dpkg-deb.1                 \
@@ -73,9 +93,24 @@
            add_$lang:$(srcdir)/po/add_$lang/dpkg-divert.8.$lang.add
 
 
+[type:man] $(srcdir)/dpkg-genchanges.1          \
+           $lang:$lang/dpkg-genchanges.1        \
+           add_$lang:$(srcdir)/po/add_$lang/dpkg-genchanges.1.$lang.add
+
+
+[type:man] $(srcdir)/dpkg-gencontrol.1          \
+           $lang:$lang/dpkg-gencontrol.1        \
+           add_$lang:$(srcdir)/po/add_$lang/dpkg-gencontrol.1.$lang.add
+
+
 [type:man] $(srcdir)/dpkg-name.1                \
            $lang:$lang/dpkg-name.1              \
            add_$lang:$(srcdir)/po/add_$lang/dpkg-name.1.$lang.add
+
+
+[type:man] $(srcdir)/dpkg-parsechangelog.1      \
+           $lang:$lang/dpkg-parsechangelog.1    \
+           add_$lang:$(srcdir)/po/add_$lang/dpkg-parsechangelog.1.$lang.add
 
 
 [type:man] $(srcdir)/dpkg-query.1               \
@@ -91,6 +126,11 @@
 [type:man] $(srcdir)/dpkg-scansources.1         \
            $lang:$lang/dpkg-scansources.1       \
            add_$lang:$(srcdir)/po/add_$lang/dpkg-scansources.1.$lang.add
+
+
+[type:man] $(srcdir)/dpkg-shlibdeps.1           \
+           $lang:$lang/dpkg-shlibdeps.1         \
+           add_$lang:$(srcdir)/po/add_$lang/dpkg-shlibdeps.1.$lang.add
 
 
 [type:man] $(srcdir)/dpkg-source.1              \
