Add missing svn:ignore entries.

--- a/scripts/.gitignore
+++ b/scripts/.gitignore
@@ -1,2 +1,21 @@
 Makefile
 Makefile.in
+dpkg-architecture
+dpkg-buildpackage
+dpkg-checkbuilddeps
+dpkg-distaddfile
+dpkg-divert
+dpkg-genchanges
+dpkg-gencontrol
+dpkg-name
+dpkg-parsechangelog
+dpkg-scanpackages
+dpkg-scansources
+dpkg-shlibdeps
+dpkg-source
+dpkg-statoverride
+update-alternatives
+install-info
+install-info-stamp
+cleanup-info
+822-date
