Fix 'make distcheck' by adding uninstall-local target to man/Makefile.am that removes the translated man pages.

--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -27,6 +27,17 @@ install-data-local:
 		fi \
 	done
 
+uninstall-local:
+	for lang in $(LINGUAS); do \
+		if [ -d $(srcdir)/$$lang ]; then \
+			files=$$(echo $(srcdir)/$$lang/*.[1-9]); \
+			$(MAKE) uninstall-man \
+				mandir="$(mandir)/$$lang" \
+				man_MANS="" \
+				dist_man_MANS="$$files"; \
+		fi \
+	done
+
 dist-hook: man.stamp
 	cp $(srcdir)/man.stamp $(distdir)/
 	for lang in $(LINGUAS); do \
