Rename and Reorder modules directory
This should make it easier to use the modules from within the source,
which is important e.g. for testing. It also makes the hierarchy more
obvious.

Rename modules to Dpkg and add subdirectory Shlibs

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = po modules
+SUBDIRS = po Dpkg
 
 bin_SCRIPTS = \
 	822-date \
