Complete reordering of directories
Move SymbolFile.pm and Objdump.pm into the Shlibs directory
Adapt Makefile.am
Fix a remaining reference to scripts/modules in configure.ac

--- a/configure.ac
+++ b/configure.ac
@@ -112,7 +112,7 @@ AC_CONFIG_FILES([ Makefile
 		  origins/Makefile
 		  po/Makefile.in
 		  scripts/Makefile
-		  scripts/modules/Makefile
+		  scripts/Dpkg/Makefile
 		  scripts/po/Makefile.in
 		  src/Makefile
 		  utils/Makefile ])
