--- a/scripts/Dpkg/Makefile.am
+++ b/scripts/Dpkg/Makefile.am
@@ -2,6 +2,6 @@
 shlibsmodulesdir=$(pkglibdir)/Dpkg/Shlibs
 dpkgmodulesdir=$(pkglibdir)/Dpkg
 
-dist_shlibsmodules_DATA = Objdump.pm SymbolFile.pm
+dist_shlibsmodules_DATA = Shlibs/Objdump.pm Shlibs/SymbolFile.pm
 dist_dpkgmodules_DATA = Shlibs.pm Version.pm
 
