Add a test target to scripts/Makefile.am
Add a simple test target copied from a MakeMaker
generated Makefile and add Dpkg::Version testscript,
like the code copied from Debbugs bzr

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -99,3 +99,9 @@ install-data-local:
 uninstall-local:
 	rm -f $(DESTDIR)$(sysconfdir)/alternatives/README
 	rm -f $(DESTDIR)$(sbindir)/install-info
+
+TEST_FILES= t/*.t
+TEST_VERBOSE= 0
+
+test:
+	PERL_DL_NONLAZY=1 $(PERL) "-MExtUtils::Command::MM" "-e" "test_harness($(TEST_VERBOSE), '.')" $(TEST_FILES)
