--- a/scripts/Dpkg/Makefile.am
+++ b/scripts/Dpkg/Makefile.am
@@ -3,5 +3,5 @@ shlibsmodulesdir=$(pkglibdir)/Dpkg/Shlibs
 dpkgmodulesdir=$(pkglibdir)/Dpkg
 
 dist_shlibsmodules_DATA = Shlibs/Objdump.pm Shlibs/SymbolFile.pm
-dist_dpkgmodules_DATA = Shlibs.pm Version.pm
+dist_dpkgmodules_DATA = ErrorHandling.pm Gettext.pm Shlibs.pm Version.pm
 
