Update list of POTFILES

--- a/scripts/po/POTFILES.in
+++ b/scripts/po/POTFILES.in
@@ -13,4 +13,8 @@ scripts/dpkg-scansources.pl
 scripts/dpkg-shlibdeps.pl
 scripts/dpkg-source.pl
 scripts/changelog/debian.pl
-
+scripts/Dpkg/Shlibs.pm
+scripts/Dpkg/Shlibs/Objdump.pm
+scripts/Dpkg/Shlibs/SymbolFile.pm
+scripts/Dpkg/Version.pm
+scripts/Dpkg/ErrorHandling.pm
