Forgot to add dpkg-gensymbols

--- a/scripts/po/POTFILES.in
+++ b/scripts/po/POTFILES.in
@@ -7,6 +7,7 @@ scripts/dpkg-checkbuilddeps.pl
 scripts/dpkg-distaddfile.pl
 scripts/dpkg-genchanges.pl
 scripts/dpkg-gencontrol.pl
+scripts/dpkg-gensymbols.pl
 scripts/dpkg-parsechangelog.pl
 scripts/dpkg-scanpackages.pl
 scripts/dpkg-scansources.pl
