dpkg-buildpackage: Convert from Shell to Perl
This will make it easier to add more features in the
future and easier to give a consistent user experience
(e.g. regarding l10n and output formatting).

Currently this should just be a 1:1 conversion without
any huge changes.

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -31,7 +31,7 @@ EXTRA_DIST = \
 	README.alternatives \
 	822-date.pl \
 	dpkg-architecture.pl \
-	dpkg-buildpackage.sh \
+	dpkg-buildpackage.pl \
 	dpkg-checkbuilddeps.pl \
 	dpkg-distaddfile.pl \
 	dpkg-genchanges.pl \
