--- a/scripts/po/POTFILES.in
+++ b/scripts/po/POTFILES.in
@@ -3,6 +3,7 @@
 scripts/822-date.pl
 scripts/controllib.pl
 scripts/dpkg-architecture.pl
+scripts/dpkg-buildpackage.pl
 scripts/dpkg-checkbuilddeps.pl
 scripts/dpkg-distaddfile.pl
 scripts/dpkg-genchanges.pl
