Adapt installation method of Perl modules to 'master'
master and dpkg-shlibdeps-buxy used two different methods
for installing the Perl modules. Use the one from master.

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = po Dpkg
+SUBDIRS = po
 
 bin_SCRIPTS = \
 	822-date \
@@ -57,7 +57,12 @@ CLEANFILES = \
 
 perllibdir = $(PERL_LIBDIR)
 nobase_dist_perllib_DATA = \
+	Dpkg/Shlibs.pm \
+	Dpkg/Shlibs/Objdump.pm \
+	Dpkg/Shlibs/SymbolFile.pm \
+	Dpkg/ErrorHandling.pm \
 	Dpkg/Gettext.pm \
+	Dpkg/Version.pm \
 	Dpkg.pm
 
 dist_pkglib_SCRIPTS = \
