--- a/scripts/t/200_Dpkg_Shlibs/ld.so.conf
+++ b/scripts/t/200_Dpkg_Shlibs/ld.so.conf
@@ -5,5 +5,5 @@
 /nonexistant/lib64
 
 include /nonexistant/*.conf
-include t/200_Dpkg_Shlibs/ld.so.conf.d/*.conf
+include t.tmp/ld.so.conf.d/*.conf
 
