Create Dpkg::Path with some functions needed for dpkg-shlibdeps
The two first function in this module are used to:
- find out the package's root directory (or build tree) using any of its
file as input
- find out the relative filename of a file inside a package's build tree

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -63,6 +63,7 @@ nobase_dist_perllib_DATA = \
 	Dpkg/ErrorHandling.pm \
 	Dpkg/BuildOptions.pm \
 	Dpkg/Gettext.pm \
+	Dpkg/Path.pm \
 	Dpkg/Version.pm \
 	Dpkg.pm
 
