debian/rules: Call $(MAKE) check during build

--- a/debian/rules
+++ b/debian/rules
@@ -59,6 +59,7 @@ build: build-tree/config.status
 	dh_testdir
 
 	cd build-tree && $(MAKE)
+	cd build-tree && $(MAKE) check
 
 # Install the package underneath debian/tmp
 install: build
