--- a/debian/rules
+++ b/debian/rules
@@ -53,6 +53,7 @@ build-tree/config.status: configure
 		--localstatedir=/var/lib \
 		--with-zlib=static \
 		--with-bz2=static
+	cp cputable ostable triplettable build-tree/
 
 # Build the package in build-tree
 build: build-tree/config.status
