Add a Conflict on dpkg-cross << 2.0.0 to dpkg-dev
dpkg-cross was sourcing dpkg-buildpackage expecting it to be a shell
script, which is not true anymore.

--- a/debian/control
+++ b/debian/control
@@ -37,7 +37,7 @@ Depends: dpkg (>= 1.14.6), perl5, perl-modules, cpio (>= 2.4.2-2),
  patch (>= 2.2-1), make, binutils
 Recommends: gcc | c-compiler, bzip2
 Suggests: gnupg, debian-keyring
-Conflicts: dpkgname
+Conflicts: dpkgname, dpkg-cross (<< 2.0.0)
 Replaces: dpkgname, dpkg (<< 1.4.1.8), dpkg-doc-ja, manpages-pl (<= 20051117-1)
 Description: package building tools for Debian
  This package contains the tools (including dpkg-source) required to
